<?xml version="1.0" encoding="utf-8"?>

<!-- Created by Shrey Kharbanda on July 15th, 2023 -->

<resources>
    <string name="app_name">AlgoReady For Free</string>
    <string name="logout">Logout</string>
    <string name="full_screen">Full Screen</string>
    <string name="exit_fullscreen">Exit</string>
    <string name="password">Password</string>
    <string name="e_mail_address">E-Mail Address</string>
    <string name="login">LOGIN</string>
    <string name="client_id">757870867136-1unlsloiakvs9245tdnee82p0mcs76q9.apps.googleusercontent.com</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">REGISTER</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_e_mail_address">Enter your e-mail address</string>
</resources>
